--- a/dpweb/index.html
+++ b/dpweb/index.html
@@ -3,7 +3,7 @@
 	<title>Soal 04</title>
 		<style type=text/css>
 		h3,li {font-family: 'Times New Roman';
-            list-style-image: url(file://C:/Users/User/Downloads/4square.html);
+            list-style-image: url(4square.html);
             font-size: 25px;       
 		    font-weight:bold;
 		   }
