--- a/tgs8/index.html
+++ b/tgs8/index.html
@@ -5,20 +5,24 @@
 <body>
 <form action="tugasp8.php" method="POST">
  Makanan <select name="makanan">
- <option value="">Pilih Makanan</option>
- <option value="Sate Ayam">Sate Ayam</option>
- <option value="Bakso">Bakso</option>
- <option value="Soto Daging">Semangka</option>
- <option value="Mie Rebus">Mie Rebus</option>
- <option value="Nasi Goreng">Nasi Goreng</option>
+ <option value="">Merk HP</option>
+ <option value="Sate Ayam">Samsung</option>
+ <option value="Bakso">IPhone</option>
+ <option value="Soto Daging">Huawei</option>
+ <option value="Mie Rebus">Oppo</option>
+ <option value="Nasi Goreng">Vivo</option>
+ <option value="Sate Ayam">Realme</option>
+ <option value="Bakso">Xiaomi</option>
+ <option value="Soto Daging">Sony</option>
+ <option value="Mie Rebus">Infinix</option>
  </select>
  <br>
-Jenis Kelamin
- <input type="radio" name="Jenis Kelamin" value="Laki-laki">Laki-laki
- <input type="radio" name="Jenis Kelamin" value="Perempuan">Perempuan
+Kondisi barang
+ <input type="radio" name="Kondisi Barang" value="Baru">Baru
+ <input type="radio" name="Kondisi Barang" value="Bekas">Bekas
 </br>
 <br>
- Alamat
+ Keterangan
 <br><textarea name="comment" rows="5" cols="40"></textarea>
 </br>
 <p>
